# python-fastapi-lambda-example

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: dependencies.py  main.py
src/core/: config.py  context.py  database.py  exceptions.py  logger.py
src/core/middleware/: __init__.py  context_middleware.py  correlation_middleware.py  exception_handle_middleware.py
src/routers/v2/: __init__.py  users.py
src/users/: models.py  schemas.py
