[tool.poetry]
name = "python-fastapi-lambda-example"
version = "0.1.0"
description = ""
authors = ["Tung CT <can.thanh.tung@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic-settings = "^2.5.2"
pydantic-extra-types = "^2.9.0"
sqlalchemy = {extras = ["postgresql-psycopgbinary"], version = "^2.0.35"}
psycopg = {extras = ["binary"], version = "^3.2.2"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
